# CMake-Best-Practices---2nd-Edition

./: .clang-format  .codespellrc  .format_cpp_files.sh  .gitmodules  .ignore-words  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/toolchain/: clang-on-windows-toolchain.cmake
.github/workflows/: ci.yml  coverage.yml  cross-compiling.yml  sanitizers.yml  superbuild.yml
chapter01/: CMakeLists.txt
chapter01/policy_example/: CMakeLists.txt
chapter01/simple_executable/: CMakeLists.txt
chapter02/: CMakeLists.txt
chapter02/component1/: CMakeLists.txt
chapter02/component2/: CMakeLists.txt
chapter02/component_interface/: CMakeLists.txt
chapter02/driver_app/: CMakeLists.txt
chapter02/simple_example/: CMakeLists.txt
chapter03/: CMakeLists.txt
chapter03/hello_header_only/: CMakeLists.txt
chapter03/hello_object_lib/: CMakeLists.txt
chapter03/hello_shared_lib/: CMakeLists.txt
chapter03/hello_simple_library_example/: CMakeLists.txt
chapter03/hello_static_lib/: CMakeLists.txt
chapter03/hello_world_standalone/: CMakeLists.txt
chapter04/: CMakeLists.txt
chapter04/ex01_executable/: CMakeLists.txt
chapter04/ex02_static/: CMakeLists.txt
chapter04/ex03_file/: CMakeLists.txt
chapter04/ex04_directory/: CMakeLists.txt
chapter04/ex05_config_file_package/: CMakeLists.txt
chapter04/ex05_consumer/: CMakeLists.txt
chapter04/ex06_pack/: CMakeLists.txt
chapter04/ex06_pack/executable/: CMakeLists.txt
chapter04/ex07_pack_nsis_standalone/: CMakeLists.txt
chapter04/ex07_pack_nsis_standalone/executable/: CMakeLists.txt
chapter04/ex07_pack_nsis_standalone/executable/src/: main.cpp
chapter05/: CMakeLists.txt
chapter05/conan_conanfile_example/: CMakeLists.txt
chapter05/conan_example/: CMakeLists.txt  conanfile.txt
chapter05/external_project/: CMakeLists.txt
chapter05/fetch_content_example/: CMakeLists.txt
chapter05/find_module/: CMakeLists.txt
chapter05/find_module/cmake/: FindObscure.cmake
chapter05/find_module/dep/: CMakeLists.txt
chapter05/find_package_example/: CMakeLists.txt
chapter05/find_package_example/src/: main.cpp
chapter05/vcpkg_example/: CMakeLists.txt
chapter06/: CMakeLists.txt
chapter06/ex01_doxdocgen/: CMakeLists.txt
chapter06/ex02_doxplantuml/: CMakeLists.txt
chapter07/: CMakeLists.txt
chapter07/clang_tidy_example/: CMakeLists.txt
chapter07/clang_tidy_example/src/: main.cpp
chapter07/coverage_example/: CMakeLists.txt
chapter07/cppcheck_example/: CMakeLists.txt
chapter07/cpplint_example/: CMakeLists.txt
chapter07/custom_build_type/: CMakeLists.txt
chapter07/fixture_example/: CMakeLists.txt
chapter07/iwyu_example/: CMakeLists.txt
chapter07/lwyu_example/: CMakeLists.txt
chapter07/pass_fail_criteria/: CMakeLists.txt
chapter07/resource_group_example/: CMakeLists.txt
chapter07/simple_sanitizer_example/: CMakeLists.txt
chapter07/simple_test/: CMakeLists.txt
chapter07/test_discovery_example/: CMakeLists.txt
chapter07/test_labels/: CMakeLists.txt
chapter07/timeout_example/: CMakeLists.txt
chapter08/: CMakeLists.txt
chapter08/chaining_custom_commands_example/: CMakeLists.txt
chapter08/configure_file_example/: CMakeLists.txt
chapter08/create_source_file_example/: CMakeLists.txt
chapter08/create_source_file_example/cmake/: WriteMain.cmake
chapter08/custom_command_example/: CMakeLists.txt
chapter08/custom_command_example/cmake/: CreateSha256.cmake
chapter08/custom_target_dependency_example/: CMakeLists.txt
chapter08/custom_target_example/: CMakeLists.txt
chapter08/execute_process_example/: CMakeLists.txt
chapter09/docker_minimal/: CMakeLists.txt  Dockerfile  README.md
chapter10/: CMakeLists.txt
chapter10/ex01_external_deps/: CMakeLists.txt  superbuild.cmake
chapter10/ex02_external_deps_with_extproject/: CMakeLists.txt  superbuild.cmake
chapter10/ex03_simple_qt_app/: CMakeLists.txt  README.md  superbuild.cmake
chapter11/: CMakeLists.txt
chapter11/app_bundle_example/: CMakeLists.txt
chapter11/app_bundle_example_custom_plist/: CMakeLists.txt  info.plist.in
chapter11/app_bundle_storyboard/: CMakeLists.txt
chapter11/app_bundle_storyboard/storyboard/: main.storyboard
chapter11/framework_example/: CMakeLists.txt
chapter11/framework_example/include/hello/: hello.hpp
chapter11/hello_world_apple/: CMakeLists.txt
chapter12/: CMakeLists.txt
chapter12/android-example/: CMakeLists.txt
chapter12/check_push_pop/: CMakeLists.txt
chapter12/check_source_compiles/: CMakeLists.txt
chapter12/emulator-example/: CMakeLists.txt  CMakePresets.json  arm64.toolchain.cmake
chapter12/iOS_example/: CMakeLists.txt  ios.toolchain.cmake
chapter13/: CMakeLists.txt
chapter13/ex01_git_utility/: CMakeLists.txt
chapter13/ex01_git_utility/cmake/: git.cmake
chapter13/ex02_envfile_utility/: CMakeLists.txt
chapter13/ex02_envfile_utility/cmake/: envfile-utils.cmake
chapter13/ex02_envfile_utility/test-executable/: CMakeLists.txt
chapter13/ex03_external_cmake_module/: CMakeLists.txt
chapter14/: CMakeLists.txt
chapter14/precompiled_headers/: CMakeLists.txt
chapter14/unity_build/: CMakeLists.txt
chapter14/unity_build_group/: CMakeLists.txt
chapter16/: CMakeLists.txt
chapter16/app_bundle_example/: CMakeLists.txt
chapter16/app_bundle_example/src/: main.mm
chapter16/app_bundle_storyboard/: CMakeLists.txt
chapter16/app_bundle_storyboard/src/: main.mm
chapter16/framework_example/: CMakeLists.txt
chapter16/framework_example/include/hello/: hello.hpp
chapter16/hello_world_apple/: CMakeLists.txt
